Fixed scrolling on small screen

--- a/client/src/app/components/app/app.component.css
+++ b/client/src/app/components/app/app.component.css
@@ -24,7 +24,8 @@
 }
 
 #drawer-container {
-  height: calc(100% - var(--tolbar-height));
+  min-height: calc(100% - var(--tolbar-height));
+  height: max-content;
 }
 
 #drawer {
