--- a/client/src/styles.css
+++ b/client/src/styles.css
@@ -1,4 +1,5 @@
 ::-webkit-scrollbar {
+  height: 4px;
   width: 4px;
   overflow-y: scroll;
   background: #5f5f5f;
